# apartments

./: .dockerignore  .env  .env.dist  .env.enc  .envrc  .gitignore  .sops.yaml  README.org  docker-compose.override.yaml  docker-compose.traefik.yaml  docker-compose.yaml  flake.nix
.docker-compose/postgres/docker-entrypoint-initdb.d/: init-additional-databases.sh
backend/: .dockerignore  .gitignore  Dockerfile  README.md  README.org  docker-compose.override.yml  docker-compose.yml  justfile  pyproject.toml  quotes-.html
backend/app/: backend_pre_start.py  cli.py  crud.py  fake_initial_data.py  initial_data.py  main.py  models.py  recompute_apartments.py  tests_pre_start.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 05d40a5d7687_apartments_num_rooms_to_numeric.py  4052c231daf9_settings_email_optional.py  4ccf8655fe4f_refactor_html_pages_into_separate_table.py  510058938db0_initial_migration.py  5fded7d64add_convert_apartment_posting_id_to_str.py  7700b3b27df1_inital.py  89cc4607a38d_apartment_remove_title.py  bd7a5de145fc_add_settings.py  c3052532d0f2_add_some_optional_values.py  c92214e1aab4_apartment_proper_decimal.py  cd45f2b6b14d_make_most_apartment_fields_optional.py  d06df53c7e6d_save_html_with_apatment.py  e4079e25a547_html_text.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: apartments.py  home.py  private.py  settings.py  utils.py
backend/app/core/: config.py  db.py
backend/app/models/: __init__.py  apartment.py  settings.py  utils.py
backend/app/scraper/: README.org  apartment_pipeline.py  items.py  settings.py
backend/app/scraper/scraper/: middlewares.py  settings.py
backend/app/scraper/scraper/spiders/: kleinanzeigen_spider.py  quotes_spider.py
backend/app/scraper/spiders/: kleinanzeigen.py
backend/app/templates/: .dir-locals.el  apartment.html  apartments.html  base.html  items.html  settings.html
backend/app/templates/partials/: apartment.html  apartments_list.html  nav.html
backend/scripts/: fake-populate-db.sh  prestart.sh  recompute.sh  test.sh  tests-start.sh
backend/tests/: conftest.py
backend/tests/api/routes/: test_apartment.py  test_settings.py
backend/tests/scraper/: test_kleinanzeigen.py  test_quotes.py
backend/tests/scraper/sites/kleinanzeigen/item/: 1.html  2.html  3.html
backend/tests/scraper/sites/kleinanzeigen/search/: 1.html
backend/tests/scraper/sites/quotes/: 2.html
backend/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
backend/tests/utils/: apartment.py
frontend/: .dockerignore  .eslintcache  .gitignore  Dockerfile  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  precommit.ts  prettier.config.js  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/lib/components/layout/: Navbar.svelte
frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte
frontend/src/routes/apartments/: +page.server.ts  +page.svelte
frontend/src/routes/settings/: +page.server.ts  +page.svelte
frontend/tests/: page.svelte.spec.ts
grafana/provisioning/datasources/: datasource.yaml
(+7 files in other folders)
