[project]
name = "apartments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "fastapi[standard]>=0.121.0",
    "jinja2>=3.1.6",
    "psycopg[binary]>=3.2.12",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "tenacity>=9.1.2",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "coverage>=7.11.0",
    "faker>=37.12.0",
    "pytest>=8.4.2",
]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]


[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true


